//
// Copyright 2022 DXOS.org
//

syntax = "proto3";

package dxos.halo.keyring;

message KeyRecord {
  bytes publicKey = 1;
  bytes privateKey = 2;
}